@@ -320,11 +320,10 @@ CMD_FUNC(m_protoctl)
 			/* Compare... */
 			if (strcmp(s+10, langsinuse))
 			{
-				sendto_one(cptr, "ERROR :My nick charset='%s', yours='%s'",
-					langsinuse, s+10);
-				sendto_realops("Link error %s: Nick charset mismatch, our='%s', theirs='%s'",
+				sendto_realops("\002WARNING!!!!\002 Link %s does not have the same set::allowed-nickchars settings (or is "
+							"a different UnrealIRCd version), this MAY cause display issues. Our charset: '%s', theirs: '%s'",
 					get_client_name(cptr, FALSE), langsinuse, s+10);
-				return exit_client(cptr, cptr, &me, "Nick charset mismatch");
+				/* return exit_client(cptr, cptr, &me, "Nick charset mismatch"); */
 			}
 		}
 		/*
